# v-c-demo2-common

./: README.md  meson.build
subprojects/: vcblockchain.wrap  vccert.wrap  vccrypt.wrap
